--- a/bulletin-board-app/Jenkinsfile
+++ b/bulletin-board-app/Jenkinsfile
@@ -3,6 +3,7 @@ pipeline {
   stages {
       stage('Test') {
           steps {
+              cd node-bulletin-board
               sh 'node --version'
           }
       }
